[gd_scene load_steps=4 format=3 uid="uid://dm6valn4sw22r"]

[ext_resource type="Script" path="res://Scripts/fase_btn.gd" id="1_iuaef"]
[ext_resource type="Texture2D" uid="uid://b02x8voh7cxy1" path="res://Addons/Free/Artes_jogo/cadeado.png" id="2_u5kf2"]
[ext_resource type="AudioStream" uid="uid://coj1gr4fggeap" path="res://Addons/Free/Sons/Trocadebot√£o.mp3" id="3_2adrc"]

[node name="fase_btn" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(6, 6)
script = ExtResource("1_iuaef")

[node name="fase" type="Sprite2D" parent="."]
position = Vector2(3.83333, 3.16667)
scale = Vector2(0.01, 0.01)

[node name="bloqueio" type="Sprite2D" parent="."]
position = Vector2(10.3333, 7.83333)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_u5kf2")

[node name="troca_btn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2adrc")
volume_db = -15.0

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
